# math-buddy

./: .gitignore  CLAUDE.md  README.md  deploy-gcp.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
backend/: .env.example  pyproject.toml  requirements.txt  test_llm.py
backend/app/: config.py  logging_config.py  main.py
backend/app/api/v1/: __init__.py  evaluate.py  questions.py
backend/app/integrations/: openrouter.py
backend/app/schemas/: evaluation.py  questions.py
backend/app/services/: evaluation_service.py  question_service.py
backend/prompts/: evaluate_answers.txt  fun_facts.txt  generate_questions.txt
backend/tests/: conftest.py
backend/tests/contract/: test_api_contracts.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_evaluation_service.py  test_question_service.py
frontend/: Dockerfile.prod  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  test_output.txt  test_results.txt  vite.config.js
frontend/src/: index.css  main.jsx
memory/: MEMORY.md  project_overview.md
specs/001-math-practice-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
(+51 files in other folders)
